examples/datalog/18_advanced_patterns/24_distinct_count.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_distinct
Knowledge graph 'test_distinct' created.
Switched to knowledge graph: test_distinct
> .kg use test_distinct
Switched to knowledge graph: test_distinct
> +orders[(1, "Alice", "Widget"), (2, "Bob", "Widget"), (3, "Alice", "Gadget"), (4, "Carol", "Widget"), (5, "Alice", "Widget")].
Inserted 5 fact(s) into 'orders'.
> distinct_cust(Cust) :- orders(_, Cust, _).
3 rows:
  ("Alice")
  ("Bob")
  ("Carol")
(session: 1 rule(s))
> +cust_count(<COUNT:C>) :- distinct_cust(C).
Script error: Parse error: Invalid term: '<COUNT:C>'
